# wikisearch_agent

./: .gitignore  README.md  pyproject.toml
prompts/: name_extractor_agent.yaml  name_scraper_prompt.yaml
src/wikisearch_agent/: __init__.py  main.py  name_finder.py  util.py
src/wikisearch_agent/schemas/: person.py
src/wsh/: __init__.py  wsh.py
tests/: test_name_finder.py  test_prompts.py  test_util.py
