[project]
name = "wikisearch-agent"
version = "0.1.0"
description = "A simple LLM agent to crawl Wikipedia looking for and structuring specific kinds of data"
readme = "README.md"
authors = [
    { name = "Heather Lane", email = "heather@illation.net" }
]
requires-python = ">=3.13"
dependencies = [
    "flake8>=7.3.0",
    "ipython>=9.5.0",
    "jupyter>=1.1.1",
    "keyring>=25.6.0",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.6",
    "openai>=1.106.1",
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
    "rich>=14.1.0",
    "structlog>=25.4.0",
]

[project.scripts]
wikisearch-agent = "wikisearch_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = "src"
markers = [
    "integration: marks tests as interation (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
branch = true
source = ["src/wikisearch_agent"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
]

[tool.flake8]
max-line-length = 120
